--- a/dada/templates/view_list_pagination_widget.tmpl
+++ b/dada/templates/view_list_pagination_widget.tmpl
@@ -4,7 +4,8 @@
 <ul class="pagination">
     
     <li class="arrow">
-        <a href="#" class="turn_page" data-page="<!-- tmpl_var first_page -->">&laquo;
+        <a href="#" class="turn_page" data-page="<!-- tmpl_var first_page -->">
+			&laquo;
         </a>
     </li>
 
