--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -1,5 +1,13 @@
 <!-- begin <!-- tmpl_var PROGRAM_NAME --> list_template_header_code_block.tmpl --> 
 
+<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/foundation/foundation.css" >
+<!-- tmpl_if add_app_css -->
+    <!-- tmpl_if comment -->
+		<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" >
+	<!-- /tmpl_if -->
+<!-- /tmpl_if -->
+
+
 <!-- tmpl_if include_jquery_lib --> 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.11.3.min.js"></script>
 <!-- /tmpl_if --> 
@@ -21,15 +29,12 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if include_jquery_lib-->
-<script type="text/javascript">
-   var $dm = $.noConflict(true);
-</script>
+	<script type="text/javascript">
+	   var $dm = $.noConflict(true);
+	</script>
 <!-- /tmpl_if -->
 
 
-<!-- tmpl_if add_app_css -->
-    <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" >
-<!-- /tmpl_if -->
 
 <!-- tmpl_if list_settings.show_archives --> 
 	<!-- tmpl_if list_settings.publish_archives_rss --> 
