--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -1,100 +1,153 @@
 <!-- begin subscription_form_widget.tmpl --> 
 
 <form action="<!-- tmpl_var script_url -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="<!-- tmpl_var subscription_form_id default="subscription_form" -->">
+	<input type="hidden" name="flavor" id="f_s" value="subscribe" >
 
-<!-- tmpl_if show_fieldset --> 
-	<fieldset>
-	<legend>
-	 Subscribe <!-- tmpl_if single_list --> to <!-- tmpl_var list_settings.list_name --><!-- tmpl_else --><!-- /tmpl_if -->
-	</legend>
-<!-- /tmpl_if -->
-
-<!-- tmpl_if single_list --> 
-    <!-- tmpl_if list_settings.closed_list -->
-	    <p class="error"> 
-	     This list is currently closed to future subscribers.
-	    </p>
-	<!-- tmpl_else --> 
-		<!-- tmpl_if list_settings.invite_only_list --> 
-			<p class="error">
-				This mailing list is currently invitation-only.
-			</p>
+	    <div class="row">
+	        <div class="small-10 columns">
+		<!-- tmpl_if show_fieldset --> 
+						<fieldset center>
+				<legend>
+					 Subscribe 
+					 <!-- tmpl_if single_list --> 
+					 	to <!-- tmpl_var list_settings.list_name -->
+					<!-- /tmpl_if -->
+				</legend>
 		<!-- /tmpl_if -->
-    <!-- /tmpl_if -->
-    <input type="hidden" name="list" id="list" value="<!-- tmpl_var list escape=HTML -->" >
-<!-- tmpl_else --> 
+
+		<!-- tmpl_if single_list --> 
+		    <input 
+				type="hidden" 
+				name="list" 
+				id="list" 
+				value="<!-- tmpl_var list escape=HTML -->" 
+			>
+		    <!-- tmpl_if list_settings.closed_list -->
+				<div class="alert-box alert radius">
+			     	This mailing list is currently closed to future subscribers.
+				</div>
+			<!-- tmpl_else --> 
+				<!-- tmpl_if list_settings.invite_only_list --> 
+					<div class="alert-box alert radius">
+						This mailing list is currently invitation-only.
+					</div>
+				<!-- /tmpl_if -->
+		    <!-- /tmpl_if -->
+		<!-- tmpl_else --> 
     
-    <!-- tmpl_if multiple_lists --> 
+		    <!-- tmpl_if multiple_lists --> 
     
-       <p><strong>Choose from the following lists:</strong></p>
+				   Choose from the following mailing lists
        
-       <!-- tmpl_var list_checkbox_menu --> 
+		       <!-- tmpl_var list_checkbox_menu --> 
     
-    <!-- tmpl_else --> 
+		    <!-- tmpl_else --> 
+		      <div class="row">
+		        <div class="large-3 medium-3 columns">
+    		
+			        <label 
+						class="medium-only-text-right large-only-text-right"
+						for="list" 
+						class="label_profile_fields"
+					>
+			       		Mailing List 
+			        </label>
+				</div> 
+		        <div class="large-9 medium-9 columns">
+					<!-- tmpl_var list_popup_menu -->
+				</div>
+		    <!-- /tmpl_if --> 
     
-        <p>
-        <label for="list" class="label_profile_fields" >
-        Choose a Mailing List: 
-        </label>
-        <!-- tmpl_var list_popup_menu -->
-        </p>
-
-    <!-- /tmpl_if --> 
-    
-<!-- /tmpl_if -->
-
-<p>
-<label for="email" class="label_profile_fields" >
-Email&nbsp;Address: 
-</label>
-<!-- tmpl_if profile_logged_in --> 
-	<span style="padding:5px;border:1px solid black"><em><!-- tmpl_var email escape=HTML --></em></span>
-	<input type="hidden" name="email" id="email" value="<!-- tmpl_var email escape=HTML -->" >
-<!-- tmpl_else --> 
-	<input type="email" name="email" id="email" value="<!-- tmpl_var email escape=HTML -->" required ><span class="error">* Required</span>
-<!-- /tmpl_if --> 
-
-</p>
+		<!-- /tmpl_if -->
 
 
-	
-<!-- tmpl_if show_fields --> 
-	<div id="subscriber_fields"> 
-	<!-- tmpl_if subscriber_fields --> 
-	    <!-- tmpl_loop subscriber_fields --> 	
-	        <p>
-	        <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
-	        <!-- tmpl_if pretty_name --> 
-				<!-- tmpl_var pretty_name escape=HTML -->: 
-	        <!-- tmpl_else --> 
-				<!-- tmpl_var name escape=HTML -->: 
+		  
+			      <div class="row">
+			        <div class="large-3 medium-3 columns">
+						<label 
+							class="medium-only-text-right large-only-text-right"
+					  		for="email" 
+					  		class="label_profile_fields"
+					  	>
+							Email Address
+						</label>
+			        </div>
+			        <div class="large-9 medium-9 columns">
+						<!-- tmpl_if profile_logged_in --> 
+							<!-- tmpl_var email escape=HTML -->
+							<input 
+								type="hidden"
+								name="email" 
+								id="email" 
+								value="<!-- tmpl_var email escape=HTML -->" 
+							>
+						<!-- tmpl_else --> 
+							<input 
+								type="email" 
+								name="email" 
+								id="email" 
+								value="<!-- tmpl_var email escape=HTML -->"
+								required="required" 
+								placeholder="user@example.com (required)"
+								>
+						<!-- /tmpl_if --> 
+			        </div>
+			      </div>
+
+	  
+		<!-- tmpl_if show_fields --> 
+			<div id="subscriber_fields"> 
+			<!-- tmpl_if subscriber_fields --> 
+			    <!-- tmpl_loop subscriber_fields -->
+					<div class="row">
+						<div class="large-3 medium-3 columns">
+			
+					        <label 
+								class="medium-only-text-right large-only-text-right"
+								for="<!-- tmpl_var name escape=HTML -->" 
+								class="label_profile_fields"
+							>
+						        <!-- tmpl_if pretty_name --> 
+									<!-- tmpl_var pretty_name escape=HTML --> 
+						        <!-- tmpl_else --> 
+									<!-- tmpl_var name escape=HTML --> 
+								<!-- /tmpl_if --> 
+							</label>
+						</div> 
+						<div class="large-9 medium-9 columns">
+					        <input 
+								type="text" 
+								name="<!-- tmpl_var name escape=HTML -->" 
+								id="<!-- tmpl_var name escape=HTML -->" 
+								class="subscriber_field" 
+								value="<!-- tmpl_var given_value escape=HTML -->"
+								placeholder="<!-- tmpl_if comment --> (required)<!-- /tmpl_if -->"  
+							>
+						</div>
+					</div>
+			    <!-- /tmpl_loop --> 
 			<!-- /tmpl_if --> 
-			</label>
-	        <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" class="subscriber_field" value="<!-- tmpl_var given_value escape=HTML -->"  >
-	        <!-- tmpl_if required --> 
-	            <span class="error">* Required</span>
-	        <!-- /tmpl_if --> 
-	        </p>
-	    <!-- /tmpl_loop --> 
-	<!-- /tmpl_if --> 
-	</div> 
-<!-- /tmpl_if -->
+			</div> 
+		<!-- /tmpl_if -->
+			<ul class="button-group right">
+				<li>
+					<input 
+						type="submit" 
+						value="Subscribe" 
+						class="button processing" 
+						id="subscribe_button"
+					>
+				</li>
+			</ul>
+		<!-- tmpl_if give_props --> 
+		    <p style="font-size:10px;font-family:Verdana,Arial,sans-serif;"><a href="http://dadamailproject.com" target="_blank" style="font-size:10px;font-family:Verdana,Arial,sans-serif;">Powered by <!-- tmpl_var name="PROGRAM_NAME" --> <!-- tmpl_var VER --> Mailing List Manager</a></p>
+		<!-- /tmpl_if --> 
 
-<input type="hidden" name="flavor" id="f_s" value="subscribe" >
-
-
-<div class="buttonfloat"> 
-	<input type="submit" value="Subscribe" class="processing" id="subscribe_button" >
-</div>
-<div class="floatclear"></div> 
-<!-- tmpl_if give_props --> 
-    <p style="font-size:10px;font-family:Verdana,Arial,sans-serif;"><a href="http://dadamailproject.com" target="_blank" style="font-size:10px;font-family:Verdana,Arial,sans-serif;">Powered by <!-- tmpl_var name="PROGRAM_NAME" --> <!-- tmpl_var VER --> Mailing List Manager</a></p>
-<!-- /tmpl_if --> 
-
-<!-- tmpl_if show_fieldset --> 
-	</fieldset>
-<!-- /tmpl_if --> 
-
+		<!-- tmpl_if show_fieldset --> 
+			</fieldset>
+		<!-- /tmpl_if --> 
+		</div>
+	</div>
 </form> 
 
 <!-- end subscription_form_widget.tmpl --> 
