--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -154,9 +154,11 @@
                <nav class="top-bar hide-for-small" data-topbar role="navigation" id="admin_header">
                     <ul class="title-area">
                        <li class="name">
-                         <h1><a href="<!-- tmpl_var PROGRAM_URL -->">
-                            <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->" >
-                         </a></h1>
+                         <h1>
+							 <a href="<!-- tmpl_var PROGRAM_URL -->">
+                            	 <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->" >
+                         	</a>
+						  </h1>
                        </li>
                      </ul>
 
@@ -190,10 +192,7 @@
                     </li>
                  </ul>
              </section> 
-
-
-
-               </nav>
+		 	</nav>
              
              <!-- tmpl_if comment --> 
              
